--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -68,6 +68,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./bin/Release/net6.0/win-x64/publish/HungryClient
+        asset_path: ./bin/Release/net6.0/win-x64/publish/HungryClient.exe
         asset_name: windows/HungryClient.exe
         asset_content_type: application/octet-stream 
